<resources>
    <!--    기타 단어-->
    <string name="app_name">GGJG-Admin</string>

    <!--    ㄱ으로 시작하는 string-->
    <string name="admin_login">관리자 로그인</string>
    <string name="this_is_ggjg_admin">궁전제과 관리자 페이지입니다.</string>
    <string name="login_comment">궁전제과 앱을 편하게 관리해 보세요!</string>

    <!--    ㄹ으로 시작하는 string-->
    <string name="login">로그인</string>

    <!--    ㅁ으로 시작하는 string-->
    <string name="qa_and_review">문의및 리뷰</string>

    <!--    ㅂ으로 시작하는 string-->
    <string name="banner">배너</string>
    <string name="request_pw">비밀번호를 입력해 주세요</string>
    <string name="bread">빵</string>

    <!--    ㅇ으로 시작하는 string-->
    <string name="request_id">아이디를 입력해 주세요</string>

    <!--    ㅈ으로 시작하는 string-->
    <string name="order">주문</string>

    <!--    ㅎ으로 시작하는 string-->
    <string name="client">회원</string>
</resources>