<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="main"
            type="com.ggjg.presentation.ui.main.MainFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.26" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.89" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/betweenStartLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.49" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/betweenEndLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.51" />

        <View
            android:id="@+id/betweenView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="@id/betweenEndLine"
            app:layout_constraintStart_toStartOf="@id/betweenStartLine" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-5dp"
            android:background="@drawable/ic_logo"
            app:layout_constraintBottom_toTopOf="@id/thisIsGGJGAdminTxt"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine" />

        <TextView
            android:id="@+id/thisIsGGJGAdminTxt"
            style="@style/Bold24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/this_is_ggjg_admin"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/topLine"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/startLine" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/bottomLine"
            app:layout_constraintEnd_toEndOf="@id/betweenStartLine"
            app:layout_constraintStart_toStartOf="@id/startLine"
            app:layout_constraintTop_toTopOf="@id/topLine">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/orderBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_main_btn"
                android:gravity="center"
                android:onClick="@{main::onClick}">

                <ImageView
                    android:id="@+id/orderImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-45dp"
                    android:background="@drawable/ic_order"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/Bold16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/order"
                    android:textColor="@color/very_dark_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/orderImage" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/firstDivide"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/breadBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_main_btn"
                android:gravity="center"
                android:onClick="@{main::onClick}">

                <ImageView
                    android:id="@+id/breadImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-45dp"
                    android:background="@drawable/ic_bread"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/Bold16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/bread"
                    android:textColor="@color/very_dark_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/breadImage" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/bottomLine"
            app:layout_constraintEnd_toEndOf="@id/endLine"
            app:layout_constraintStart_toStartOf="@id/betweenEndLine"
            app:layout_constraintTop_toTopOf="@id/topLine">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clientBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_main_btn"
                android:gravity="center"
                android:onClick="@{main::onClick}">

                <ImageView
                    android:id="@+id/clientImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-45dp"
                    android:background="@drawable/ic_client"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/Bold16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/client"
                    android:textColor="@color/very_dark_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/clientImage" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/secondDivide"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bannerBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_main_btn"
                android:gravity="center"
                android:onClick="@{main::onClick}">

                <ImageView
                    android:id="@+id/bannerImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-45dp"
                    android:background="@drawable/ic_order"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/Bold16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:text="@string/banner"
                    android:textColor="@color/very_dark_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bannerImage" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>